@@ -269,11 +269,8 @@
   <record id="2" aka="AAAAAAAAAAI=">
     <pickle>
       <tuple>
-        <tuple>
-          <string>Products.Formulator.TALESField</string>
-          <string>TALESMethod</string>
-        </tuple>
-        <none/>
+        <global name="TALESMethod" module="Products.Formulator.TALESField"/>
+        <tuple/>
       </tuple>
     </pickle>
     <pickle>
@@ -288,18 +285,15 @@
   <record id="3" aka="AAAAAAAAAAM=">
     <pickle>
       <tuple>
-        <tuple>
-          <string>Products.Formulator.TALESField</string>
-          <string>TALESMethod</string>
-        </tuple>
-        <none/>
+        <global name="TALESMethod" module="Products.Formulator.TALESField"/>
+        <tuple/>
       </tuple>
     </pickle>
     <pickle>
       <dictionary>
         <item>
             <key> <string>_text</string> </key>
-            <value> <string>python:tuple(here.portal_categories.classification.getCategoryChildLogicalPathItemList(display_none_category=0,filter_node=1,local_sort_id=\'title\',checked_permission=\'View\'))</string> </value>
+            <value> <string>python:tuple(here.portal_categories.classification.getCategoryChildTranslatedLogicalPathItemList(display_none_category=0,filter_node=1,local_sort_id=\'translated_title\',checked_permission=\'View\'))</string> </value>
         </item>
       </dictionary>
     </pickle>
