@@ -1,3 +1,6 @@
+2008-10-29 yusei
+* Classification, Function fields are now translatable.
+
 2008-10-14 yusei
 * Added SortIndex property sheet to Image and File.
 
